--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Каталог</title>
+    <title>Moire</title>
     <link rel="stylesheet" href="/css/style.min.css">
   </head>
   <body>
